--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.506.0",
-    "next": "15.3.1",
+    "next": "^16.1.6",
     "primereact": "^10.9.5",
     "probe-image-size": "^7.2.3",
     "radix-ui": "^1.3.4",
-    "react": "^19.0.0",
+    "react": "^19.2.4",
     "react-bootstrap": "^2.10.9",
     "react-confetti": "^6.4.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-scroll-parallax": "^3.4.5",
